# clap-cpp-validator

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build-validator.yml
scripts/: fix_file_comments.pl  fix_header_guards.pl
src/: main.cpp  util.cpp  util.h  validator.cpp  validator.h
src/commands/: list.cpp  list.h  validate.cpp  validate.h
src/plugin/: host.cpp  host.h  instance.cpp  instance.h  library.cpp  library.h
src/tests/: plugin_library_tests.cpp  plugin_library_tests.h  plugin_tests.cpp  plugin_tests.h  test_case.cpp  test_case.h
